--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@types/leaflet": "^1.9.6",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
@@ -19,7 +20,8 @@
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
     "react-leaflet": "^4.2.1",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
