--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^4.36.1",
     "@types/leaflet": "^1.9.6",
+    "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
     "leaflet": "^1.9.4",
@@ -20,6 +23,7 @@
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
     "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
     "xml-js": "^1.6.11",
     "zustand": "^4.4.3"
   },
