--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
+    "react-spinners": "^0.13.8",
     "xml-js": "^1.6.11",
     "zustand": "^4.4.3"
   },
