--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^8.1.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-google-maps/api": "^2.19.2",
     "@tanstack/react-query": "^4.36.1",
     "@types/leaflet": "^1.9.6",
     "dayjs": "^1.11.10",
@@ -23,7 +24,6 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-geocode": "^1.0.0-alpha.1",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
